--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -13,4 +13,6 @@ file(GLOB_RECURSE SGCONSOLEAPP_HEADERS SGConsole/App/*.h)
 file(GLOB_RECURSE SGCORE_HEADERS SGCore/*.h)
 file(GLOB_RECURSE SGUTILS_HEADERS SGUtils/*.h)
 
-install(FILES ${SGCONSOLEAPI_HEADERS} ${SGCONSOLEAPP_HEADERS} ${SGCORE_HEADERS} ${SGUTILS_HEADERS} PUBLIC_HEADER DESTINATION include/SungearEngineSDK)
+message("core headers: " ${SGCORE_HEADERS})
+
+install(FILES ${SGCONSOLEAPI_HEADERS} ${SGCONSOLEAPP_HEADERS} ${SGCORE_HEADERS} ${SGUTILS_HEADERS} DESTINATION include/SungearEngineSDK)
