--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -15,4 +15,22 @@ file(GLOB_RECURSE SGUTILS_HEADERS SGUtils/*.h)
 
 message("core headers: " ${SGCORE_HEADERS})
 
-install(FILES ${SGCONSOLEAPI_HEADERS} ${SGCONSOLEAPP_HEADERS} ${SGCORE_HEADERS} ${SGUTILS_HEADERS} DESTINATION include/SungearEngineSDK)
+install(DIRECTORY "SGConsole/" # source directory
+        DESTINATION "include/SungearEngineSDK" # target directory
+        FILES_MATCHING # install only matched files
+        PATTERN "*.h" # select header files
+)
+
+install(DIRECTORY "SGCore/" # source directory
+        DESTINATION "include/SungearEngineSDK" # target directory
+        FILES_MATCHING # install only matched files
+        PATTERN "*.h" # select header files
+)
+
+install(DIRECTORY "SGUtils/" # source directory
+        DESTINATION "include/SungearEngineSDK" # target directory
+        FILES_MATCHING # install only matched files
+        PATTERN "*.h" # select header files
+)
+
+# install(FILES ${SGCONSOLEAPI_HEADERS} ${SGCONSOLEAPP_HEADERS} ${SGCORE_HEADERS} ${SGUTILS_HEADERS} DESTINATION include/SungearEngineSDK)
